--- a/etc/dhcp/dhcpd.conf
+++ b/etc/dhcp/dhcpd.conf
@@ -7,11 +7,11 @@
 #
 
 # option definitions common to all supported networks...
-option domain-name "example.org";
-option domain-name-servers ns1.example.org, ns2.example.org;
+option domain-name "pi.local";
+option domain-name-servers 8.8.8.8;
 
-default-lease-time 600;
-max-lease-time 7200;
+default-lease-time 3600;
+max-lease-time 86400;
 
 # The ddns-updates-style parameter controls whether or not the server will
 # attempt to do a DNS update when a lease is confirmed. We default to the
@@ -21,13 +21,19 @@ ddns-update-style none;
 
 # If this DHCP server is the official DHCP server for the local
 # network, the authoritative directive should be uncommented.
-#authoritative;
+authoritative;
 
 # Use this to send dhcp log messages to a different log file (you also
 # have to hack syslog.conf to complete the redirection).
 #log-facility local7;
 
-# No service will be given on this subnet, but declaring it helps the 
+# Configure service for local network 192.168.47.0 (the wireless AP)
+subnet 192.168.99.0  netmask 255.255.255.0 {
+    range 192.168.99.50 192.168.99.250;
+    option routers 192.168.99.1;
+}
+
+# No service will be given on this subnet, but declaring it helps the
 # DHCP server to understand the network topology.
 
 #subnet 10.152.187.0 netmask 255.255.255.0 {
